style.css
@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Baloo+Bhaina+2:wght@600&family=Martel+Sans:wght@200;300;400;600;700;800;900&family=Matemasie&family=Plus+Jakarta+Sans:ital,wght@0,700;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Stylish&display=swap');

* {
    margin: 0;
    padding: 0;
    /* overflow-x: hidden; */
}

/* ::selection {
    background: rgba(13, 194, 226, 0.959);
    color: white;
} */

:root {
    --color: white;
    --black: black;
}

body {
    font-family: "Stylish", serif;
}

.nav-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    /* padding: 15px 0 15px; */
    border: 2px solid black;
    top: 20px;
    position: relative;
    width: 90%;
    left: 61px;
    border-radius: 20px;
    overflow: hidden;
}

.number1 {
    position: absolute;
    left: 201px;
    font-size: 19px;
    top: 42px;
}

.number2 {
    position: absolute;
    left: 362px;
    font-size: 19px;
    top: 42px;
}

.number3 {
    position: absolute;
    left: 510px;
    font-size: 19px;
    top: 42px;
}

nav {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 30px;
}

nav ul {
    display: flex;
}

nav ul li {
    list-style: none;
}

nav ul li a {
    text-decoration: none;
    color: var(--black);
    font-size: 27px;
    font-size: 27px;
    padding: 10px 40px 35px 25px;
    border-right: 2px solid black;
    position: relative;
    bottom: 13px;
    right: 32px;
}

.sidebar-menu {
    position: fixed;
    top: 0;
    right: 0;
    height: 100vh;
    width: 250px;
    z-index: 999;
    background-color: rgba(255, 255, 255, 0.2);
    backdrop-filter: blur(10px);
    box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
    display: none;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;
}

.sidebar-menu li {
    width: 100%;
}

.sidebar-menu li a {
    border: none;
    width: 100%;
}

.menu-btn i,
.menu-btn i {
    font-size: 38px;
    position: absolute;
}

.logo {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0 28px;
    background: #f2ff41;
    border-right: 2px solid black;
    height: 70px;
}

.logo i {
    font-size: 40px;
    overflow: hidden;
}

.single-icon {
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    left: 36em;
}

.social-links {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0 95px;
    gap: 8px;
}

.social-links i {
    font-size: 25px;
}

.social-links span {
    width: 40px;
    border: 2px solid var(--black);
    border-radius: 100%;
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.social-links span:nth-child(3) {
    background: var(--black);
}

.fa-instagram {
    color: var(--color);
}

.text {
    position: absolute;
    display: flex;
    align-items: center;
    justify-content: center;
    right: 21px;
    gap: 5px;
    font-size: 20px;
}

.text span:nth-child(2) {
    width: 25px;
    border: 2px solid var(--black);
    border-radius: 100%;
    height: 25px;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: yellow;
}

.head {
    padding: 90px 0 40px;
}

.head h1 {
    font-size: 60px;
    width: 29%;
    font-weight: bold;
}

.head h1 span {
    border: 2px solid black;
    border-radius: 40px;
    padding: 0 10px;
}

.content {
    width: 40%;
}

main {
    padding: 0 0 0 60px;
    position: absolute;
}

.circle-arrow i {
    font-size: 75px;
    position: absolute;
    transform: rotate(-130deg);
    bottom: 0px;
    left: 7.6em;
    transition: .5s;
}

.circle-arrow i:hover {
    transform: rotate(-30deg);
}

.box1,
.box2,
.box3,
.box4,
.box5,
.box6,
.box7,
.box8,
.box9 {
    width: 200px;
    height: 200px;
    position: absolute;
    top: 100px;
    border-radius: 20px;
    border: 1px solid black;
    /* overflow: hidden; */
}

.box1 {
    right: 442px;
    display: flex;
    align-items: end;
    justify-content: end;
    background: var(--color);
    overflow: hidden;
}

.box2 {
    right: 240px;
    background-color: white;
    overflow: hidden;
}

.box3 {
    right: 38px;
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: hidden;
}

.box4 {
    top: 302px;
    right: 442px;
    background: #d5d0d0;
    overflow: hidden;
}

.box5 {
    top: 302px;
    right: 240px;
    background-color: black;
}

.box6 {
    top: 302px;
    right: 38px;
    background-color: black;
}

.box7 {
    top: 504px;
    right: 442px;
    overflow: hidden;
}

.box8 {
    top: 504px;
    right: 240px;
    background-color: #d5d0d0;
}

.box9 {
    top: 504px;
    right: 38px;
    background-color: #f2ff41;
    display: flex;
    justify-content: center;
    align-items: center;
}

.box91 {
    width: 170px;
    height: 170px;
    background: white;
    border-radius: 20px;
    border: 1px solid black;
}

.dot-91 {
    width: 20px;
    height: 20px;
    background: black;
    border-radius: 100%;
    position: absolute;
    top: 25px;
    left: 25px;
}

.logo-2 {
    font-size: 85px;
    position: absolute;
    top: 35px;
    left: 20px;
}

.half-circle {
    width: 250px;
    height: 250px;
    background: #f2ff41;
    border-top-left-radius: 73%;
    position: absolute;
    left: 30px;
    top: 11px;
}

.half-circle i {
    position: absolute;
    font-size: 95px;
    top: 75px;
    left: 42px;
}

.second-half-circle {
    width: 175px;
    height: 165px;
    background: var(--color);
    border-bottom-left-radius: 100%;
    position: absolute;
    left: 31px;
    top: 0px;
}

.second-half-circle i {
    position: absolute;
    font-size: 90px;
    top: 48px;
    left: 25px;
}
/* ... */

